# zmk-config

./: .gitignore  LICENSE  README.md  build.yaml  flake.nix  justfile  maskfile.md  pyproject.toml
.github/workflows/: build.yml
.west/: config
config/: lily58.conf  lily58.keymap  lotus58.conf  lotus58.keymap  west.yml
native_posix_config/: native_posix.conf  native_posix.keymap  native_posix_64.conf  native_posix_64.keymap
native_posix_config/boards/shields/rpi/: Kconfig.defconfig
native_posix_config/boards/shields/zmk_linux/: Kconfig.defconfig  Kconfig.shield  zmk_linux.conf
